--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description:
   <br>
   </p>
 #logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+#description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
